Mark favorite movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,20 @@
 <resources>
     <string name="app_name">Popular Movies App</string>
 
-    <string name="most_popular">Most Popular</string>
-    <string name="top_rated">Top Rated</string>
+    <string name="menu_item_most_popular">Most Popular</string>
+    <string name="menu_item_top_rated">Top Rated</string>
+    <string name="menu_item_favorite">Favorite</string>
 
     <string name="movies">Movies</string>
     <string name="movie_detail">Movie Detail</string>
     <string name="of_max_rating">/10</string>
     <string name="thumbnail">Thumbnail</string>
 
-    <string name="trailer_list_title">Trailers:</string>
+    <string name="trailer_list_title">Trailers</string>
     <string name="trailer_name">Trailer %1$d</string>
 
     <string name="youtube_initialize_failure">Failure to initialize.</string>
     <string name="play_button_description">Press button to play trailer.</string>
+    <string name="button_favorite_text">Mark as favorite</string>
+
 </resources>
